--- a/package.json
+++ b/package.json
@@ -1,14 +1,28 @@
 {
-  "name": "nodejs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bootstrap": "^5.1.3"
-  }
+    "name": "nodejs",
+    "version": "1.0.0",
+    "description": "",
+    "main": "main.js",
+    "scripts": {
+        "start": "nodemon app.js",
+        "dev": "nodemon app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bootstrap": "^5.1.3",
+        "cors": "^2.8.5",
+        "create-react-app": "^5.0.1",
+        "dotenv": "^16.0.1",
+        "express": "^4.17.3",
+        "node-oracledb": "^1.0.2",
+        "oracledb": "^5.3.0",
+        "socket.io": "^4.4.1",
+        "socket.io-client": "^4.4.1",
+        "websocket": "^1.0.34"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.15"
+    }
 }
