--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "bootstrap": "^5.1.3",
         "cors": "^2.8.5",
         "create-react-app": "^5.0.1",
         "dotenv": "^16.0.1",
         "express": "^4.17.3",
+        "jsonwebtoken": "^8.5.1",
         "node-oracledb": "^1.0.2",
         "oracledb": "^5.3.0",
         "socket.io": "^4.4.1",
