--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "create-react-app": "^5.0.1",
         "dotenv": "^16.0.1",
         "express": "^4.17.3",
+        "express-fileupload": "^1.4.0",
         "jsonwebtoken": "^8.5.1",
         "node-oracledb": "^1.0.2",
         "oracledb": "^5.3.0",
