--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/oracledb": "^5.2.3",
         "bcryptjs": "^2.4.3",
         "bootstrap": "^5.1.3",
+        "child_process": "^1.0.2",
         "cors": "^2.8.5",
         "create-react-app": "^5.0.1",
         "dotenv": "^16.0.1",
@@ -23,6 +25,7 @@
         "oracledb": "^5.3.0",
         "socket.io": "^4.4.1",
         "socket.io-client": "^4.4.1",
+        "sqlite3": "^5.0.9",
         "websocket": "^1.0.34"
     },
     "devDependencies": {
