--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "express-fileupload": "^1.4.0",
         "jsonwebtoken": "^8.5.1",
         "node-oracledb": "^1.0.2",
+        "nodemailer": "^6.7.8",
         "oracledb": "^5.3.0",
         "socket.io": "^4.4.1",
         "socket.io-client": "^4.4.1",
